// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`browserslist-to-esbuild > should no support android 4 1`] = `
[
  "chrome138",
]
`;

exports[`browserslist-to-esbuild > should work with android and ios 1`] = `
[
  "chrome138",
  "ios11",
]
`;

exports[`browserslist-to-esbuild > should work with ios 1`] = `
[
  "ios9",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as array 1`] = `
[
  "chrome109",
  "edge137",
  "firefox140",
  "ios11",
  "safari18.5",
]
`;

exports[`browserslist-to-esbuild > works by passing browsers as string 1`] = `
[
  "chrome138",
  "edge137",
  "firefox140",
  "ie10",
  "ios18.4",
  "opera116",
  "safari18.4",
]
`;
